--- a/istio/virtual_service_canary.yml
+++ b/istio/virtual_service_canary.yml
@@ -20,8 +20,13 @@ spec:
     - destination:
         host: front-end.production.svc.cluster.local
         subset: v1
-      weight: 50 #v1
+      weight: 33 #v1
     - destination:
         host: front-end.production.svc.cluster.local
         subset: v2
-      weight: 50 #v2
+      weight: 33 #v2
+    - destination:
+        host: front-end.production.svc.cluster.local
+        subset: v3
+      weight: 34 #v3
+
